--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,18 +9,20 @@
     {%- if jekyll.environment == 'production' and site.google_analytics -%}
       {%- include google-analytics.html -%}
     {%- endif -%}
-  
+    <!-- <script type="text/javascript" src="config.js" defer></script>
+    <script type="text/javascript" id="MathJax-script" defer
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script> -->
     <script>
-      MathJax = {
-        tex: {
-          inlineMath: [['$', '$'], ['\\(', '\\)']], // インライン数式のためのデリミタ
-          displayMath: [['$$', '$$'], ['\\[', '\\]']], // ディスプレイ数式のためのデリミタ
-          processEscapes: true // \$などのエスケープを処理
-        },
-        svg: {
-          fontCache: 'global'
-        }
-      };
+        window.MathJax = {
+          tex: {
+            packages: {'[+]': ['ams']},  // ← amsパッケージを明示的に有効化
+            inlineMath: [['$', '$'], ['\\(', '\\)']],
+            displayMath: [['$$', '$$'], ['\\[', '\\]']],
+          }
+        };
     </script>
-    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+
 </head>
